--- a/index.html
+++ b/index.html
@@ -28,19 +28,40 @@
     <div class="nav-links">
       <a href="index.html">إدارة كهرباء القصيم</a>
       <a href="#">دائرة دعم العمليات والصيانة</a>
-      <a href="operations.html">قسم التشغيل</a>
+      <div class="operation-horizontal-group">
+        <span class="operation-link-text">
+          <svg width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M4 6h16M4 12h16M4 18h7" stroke="#CC7722" stroke-width="2" stroke-linecap="round"/></svg>
+          قسم التشغيل
+        </span>
+        <button class="intro-btn" title="مقدمة التشغيل" onclick="window.location.href='operations.html';">
+          <svg width="18" height="18" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg"><rect x="3" y="4" width="14" height="2.5" rx="1.2" fill="#CC7722"/><rect x="3" y="8" width="10" height="2" rx="1" fill="#CC7722"/><rect x="3" y="12" width="7" height="1.5" rx="0.8" fill="#CC7722"/><circle cx="16" cy="15.5" r="1.2" fill="#CC7722"/></svg>
+        </button>
+        <button class="pen-btn-inline" title="ملاحظات وتعديلات" onclick="window.location.href='pen.html';">
+          <svg width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M3 17.25V21h3.75l11.06-11.06-3.75-3.75L3 17.25z" fill="#CC7722"/><path d="M20.71 7.04a1 1 0 0 0 0-1.41l-2.34-2.34a1 1 0 0 0-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z" fill="#CC7722"/></svg>
+        </button>
+      </div>
     </div>
   </header>
 
   <!-- قسم البحث -->
   <section class="container">
-    <h1></h1>
+    <h1 id="mainTitle">ابحث عن موقعك بسهولة</h1>
     <div class="search-box">
       <input type="text" id="searchInput" placeholder="أدخل اسم الموقع..." aria-label="حقل بحث المواقع">
       <div id="resultsContainer"></div>
       <div id="suggestions" class="suggestions"></div>
     </div>
   </section>
+  <script>
+    function showAdminAccess() {
+      var pass = prompt('أدخل كلمة المرور:');
+      if(pass === 'admin123') {
+        window.location.href = 'admin.html';
+      } else if(pass) {
+        alert('كلمة المرور غير صحيحة!');
+      }
+    }
+  </script>
 
   <!-- الفوتر -->
   <footer>
