--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ar">
+<html lang="ar" dir="rtl">
 <head>
   <!-- meta: ترميز النصوص لدعم العربية -->
   <meta charset="UTF-8">
@@ -8,7 +8,7 @@
   <!-- meta: وصف الصفحة لمحركات البحث -->
   <meta name="description" content="صفحة بحث متقدمة باستخدام خرائط Google لتسهيل الوصول إلى المواقع.">
   <!-- title: عنوان الصفحة -->
-  <title>صفحة البحث المميزة</title>
+  <title>صفحة التشغيل - إدارة كهرباء القصيم</title>
   <link rel="stylesheet" href="styles.css">
   <!-- Google tag (gtag.js) -->
   <script defer src="https://www.googletagmanager.com/gtag/js?id=G-FCJQ9RJQ0V"></script>
@@ -30,14 +30,14 @@
       <a href="#">دائرة دعم العمليات والصيانة</a>
       <div class="operation-horizontal-group">
         <span class="operation-link-text">
-          <svg width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M4 6h16M4 12h16M4 18h7" stroke="#CC7722" stroke-width="2" stroke-linecap="round"/></svg>
           قسم التشغيل
         </span>
         <button class="intro-btn" title="مقدمة التشغيل" onclick="window.location.href='operations.html';">
           <svg width="18" height="18" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg"><rect x="3" y="4" width="14" height="2.5" rx="1.2" fill="#CC7722"/><rect x="3" y="8" width="10" height="2" rx="1" fill="#CC7722"/><rect x="3" y="12" width="7" height="1.5" rx="0.8" fill="#CC7722"/><circle cx="16" cy="15.5" r="1.2" fill="#CC7722"/></svg>
         </button>
-        <button class="pen-btn-inline" title="ملاحظات وتعديلات" onclick="window.location.href='pen.html';">
-          <svg width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M3 17.25V21h3.75l11.06-11.06-3.75-3.75L3 17.25z" fill="#CC7722"/><path d="M20.71 7.04a1 1 0 0 0 0-1.41l-2.34-2.34a1 1 0 0 0-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z" fill="#CC7722"/></svg>
+        <button class="pen-btn-inline" title="ملاحظات وتعديلات" onclick="window.location.href='feedback.html';">
+          <path d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34c-.39-.39-1.02-.39-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z" fill="#333"/>
+        </svg>
         </button>
       </div>
     </div>
@@ -45,30 +45,20 @@
 
   <!-- قسم البحث -->
   <section class="container">
-    <h1 id="mainTitle">ابحث عن موقعك بسهولة</h1>
+    <h1 id="mainTitle"></h1>
     <div class="search-box">
-      <input type="text" id="searchInput" placeholder="أدخل اسم الموقع..." aria-label="حقل بحث المواقع">
+      <input type="text" id="searchInput" placeholder="ابحث عن الموقع..." aria-label="حقل بحث المواقع">
       <div id="resultsContainer"></div>
       <div id="suggestions" class="suggestions"></div>
     </div>
-  </section>
-  <script>
-    function showAdminAccess() {
-      var pass = prompt('أدخل كلمة المرور:');
-      if(pass === 'admin123') {
-        window.location.href = 'admin.html';
-      } else if(pass) {
-        alert('كلمة المرور غير صحيحة!');
-      }
-    }
-  </script>
+</div>
 
   <!-- الفوتر -->
   <footer>
-    <p>تصميم وتطوير© فهد الفهيد | 2025</p>
+    <p>تصميم وتطوير© فهد الفهيد | 109096</p>
   </footer>
 
   <!-- JavaScript لمقترحات البحث -->
-  <script src="script.js"></script>
+  <script defer src="script.js"></script>
 </body>
 </html>
