--- a/operations.html
+++ b/operations.html
@@ -1,5 +1,5 @@
  </script><!DOCTYPE html>
-<html lang="ar">
+<html lang="ar" dir="rtl">
 <head>
   <!-- meta: ترميز النصوص لدعم العربية -->
   <meta charset="UTF-8">
@@ -8,7 +8,7 @@
   <!-- meta: وصف الصفحة لمحركات البحث -->
   <meta name="description" content="صفحة قسم التشغيل لإدارة كهرباء القصيم، توفر تجربة رقمية متكاملة للوصول إلى المواقع.">
   <!-- title: عنوان الصفحة -->
-  <title>قسم التشغيل - إدارة كهرباء القصيم</title>
+  <title>صفحة التشغيل - إدارة كهرباء القصيم</title>
   <link rel="stylesheet" href="styles.css">
   <!-- Google tag (gtag.js) -->
   <script defer src="https://www.googletagmanager.com/gtag/js?id=G-FCJQ9RJQ0V"></script>
@@ -35,13 +35,14 @@
   <!-- قسم المقدمة -->
   <section class="container">
     <section class="intro">
+      <h1>رسالة رئيس القسم</h1>
       <p>في إدارة كهرباء القصيم، نسعى جاهدين لتقديم تجربة رقمية متكاملة وسلسة من خلال صفحة قسم التشغيل. صُممت هذه الصفحة بعناية لتكون مرجعًا شاملًا يوفر الوصول السريع والسهل إلى مواقعنا عبر خرائط Google، مما يعزز الكفاءة ويسهل عمليات التشغيل والصيانة. نهدف إلى تمكين مستخدمينا من التنقل بثقة وسرعة، مع ضمان توفر كافة المعلومات الضرورية في واجهة بسيطة وجذابة.</p>
     </section>
   </section>
 
   <!-- الفوتر -->
   <footer>
-    <p>تصميم وتطوير© فهد الفهيد | 2025</p>
+    <p>تصميم وتطوير© فهد الفهيد | 109096</p>
   </footer>
 </body>
 </html>
