--- a/feedback.html
+++ b/feedback.html
@@ -49,7 +49,7 @@
 <body>
   <header>
     <div class="logo">
-      <img src="logo.png" alt="شعار إدارة كهرباء القصيم">
+      <img src="https://www2.0zz0.com/2025/04/09/19/540933648.png" alt="شعار إدارة كهرباء القصيم">
     </div>
     <div class="nav-links">
       <a href="index.html" class="operation-link">الصفحة الرئيسية</a>
